--- a/Server/Views/media/index.hbs
+++ b/Server/Views/media/index.hbs
@@ -10,6 +10,9 @@
             <p>{{this.status}}</p>
             <p>{{this.rating}}</p>
             <p>{{this.username}}</p>
+            <a href="/media/delete/{{this._id}}" class="btn btn-primary" onclick="return confirm('For real?!');">
+                Delete
+            </a>
         </li>
     {{/each}}
 </ul>
