added Details function

--- a/Server/Views/media/index.hbs
+++ b/Server/Views/media/index.hbs
@@ -15,6 +15,7 @@
             <p>{{this.username}}</p>
             <a href="/media/delete/{{this._id}}" class="btn btn-primary" onclick="return confirm('For real?!');">Delete</a>
             <a href="media/edit/{{this._id}}" class="btn btn-primary mt-2">Edit</a>
+            <a href="media/details/{{this._id}}" class="btn btn-primary mt-2">Details</a>
         </li>
     {{/each}}
 </ul>
