--- a/Server/Views/layout.hbs
+++ b/Server/Views/layout.hbs
@@ -30,6 +30,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/register">Register</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/provider">Provider</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
@@ -55,6 +58,9 @@
     <main>
         {{{body}}}
     </main>
+    <footer>
+      <p>Veggie Media | Benjamin Noje | 1190792</p>
+    </footer>
     <!-- Script Section -->
     <script src="jquery/dist/jquery.min.js"></script>
     <script src="bootstrap/dist/js/bootstrap.bundle.min.js"></script>
