--- a/Server/Views/media/create.hbs
+++ b/Server/Views/media/create.hbs
@@ -20,7 +20,11 @@
     </fieldset>
     <fieldset>
         <label for="provider">Provider: *</label>
-        <input name="provider" id="provider" required />
+        <select name="provider" id="provider" required>
+            {{#each provider}}
+                <option>{{this.name}}</option>
+            {{/each}}
+        </select>
     </fieldset>
     <fieldset>
         <label for="status">Status: *</label>
