--- a/Server/Views/media/details.hbs
+++ b/Server/Views/media/details.hbs
@@ -12,6 +12,6 @@
             <p>{{media.rating}}</p>
             <p>{{media.username}}</p>
             <a href="/media/delete/{{media._id}}" class="btn btn-primary" onclick="return confirm('For real?!');">Delete</a>
-            <a href="media/edit/{{media._id}}" class="btn btn-primary mt-2">Edit</a>
+            <a href="/media/edit/{{media._id}}" class="btn btn-primary mt-2">Edit</a>
         </li>
 </ul>
