--- a/Server/Views/layout.hbs
+++ b/Server/Views/layout.hbs
@@ -18,22 +18,34 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link " href="/about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/media">Media Library</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/register">Register</a>
-        </li>
-        <li class="nav-item">
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/media">Media Library</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+                {{#if user}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa-regular fa-id-badge"></i> {{user.username}}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/logout"><i class="fa-regular fa-id-badge"></i> Logout</a>
+                    </li>
+                {{else}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/register"><i class="fa-solid fa-user-plus"></i> Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/auth/login"><i class="fa-regular fa-id-badge"></i> Login</a>
+                    </li>
+                {{/if}}                
+          </ul>
+        {{!-- <li class="nav-item">
           <a class="nav-link" href="/provider">Provider</a>
-        </li>
-        <li class="nav-item dropdown">
+        </li> --}}
+        {{!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
           </a>
@@ -46,8 +58,8 @@
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
+        </li> --}}
+      
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
